# data-minuseek

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.prod  Makefile  README.md  compose.yaml  pyproject.toml
.agents/skills/data-review/: SKILL.md
.github/workflows/: deploy-dev.yml  deploy-prod.yml
docs/adr/: 0000-template.md  README.md
java/sourceafis/: pom.xml
src/: config.py  main.py  schemas.py
src/comparison/: __init__.py
src/comparison/adapters/: __init__.py
src/comparison/adapters/inbound/: __init__.py  http.py
src/comparison/adapters/outbound/: __init__.py  console_reporter.py
src/comparison/application/: __init__.py  compare_images.py
src/comparison/domain/: __init__.py  models.py  ports.py
src/repositories/: image_repository.py
src/routers/: compare.py  health.py
src/services/: comparison.py  sourceafis.py
