[project]
name = "data-dacty"
version = "0.1.0"
description = "Minimal FastAPI skeleton for Fingerprint data services"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "jpype1",
    "python-multipart",
]

[dependency-groups]
dev = [
    "ruff>=0.15.13",
]
