[project]
name = "data-minuseek"
version = "0.1.0"
description = "Minimal FastAPI skeleton for Fingerprint data services"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "jpype1",
    "python-multipart",
    "httpx",
    "google-cloud-storage>=3.9.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.13",
]
